crates/bsql/tests/compile_fail/type_mismatch_i64_for_i32.stderr
error: type mismatch for parameter `$id`: declared `i64` but PostgreSQL expects `int4` (OID 23) (expected `i32`)
 --> tests/compile_fail/type_mismatch_i64_for_i32.rs:4:13
  |
4 |       let _ = bsql::query!(
  |  _____________^
5 | |         "SELECT id FROM users WHERE id = $id: i64"
6 | |     );
  | |_____^
  |
  = note: this error originates in the macro `bsql::query` (in Nightly builds, run with -Z macro-backtrace for more info)
